2013-03-02  Eli Zaretskii  <eliz@gnu.org>

	* textprop.c (Fadd_text_properties, Fremove_text_properties): If
	the interval tree changes as a side effect of calling
	modify_region, re-do processing starting from the call to
	validate_interval_range.  (Bug#13743)

2013-02-28  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (sys_open): Don't reset the flags for FD in fd_info[].
	(Bug#13546).

2013-02-27  Eli Zaretskii  <eliz@gnu.org>

	* filelock.c (create_lock_file) [WINDOWSNT]: Use _sopen with
	_SH_DENYRW flag, instead of emacs_open, to deny any other process
	access to the lock file until it is written and closed.
	(Bug#13807)

2013-02-27  Paul Eggert  <eggert@cs.ucla.edu>

	* callint.c (Qcall_interactively):
	* macros.c (Qexecute_kbd_macro):
	Now static.

2013-02-26  Bastien Guerry  <bzg@gnu.org>

	* window.c (Frecenter): Tiny docstring enhancement.

2013-02-26  Paul Eggert  <eggert@cs.ucla.edu>

	Minor textprop integer cleanup.
	* intervals.h, textprop.c (add_text_properties_from_list):
	Return void, not int, since nobody uses the return value.
	* textprop.c (validate_plist, add_properties, remove_properties)
	(Fadd_text_properties):
	Don't assume list length fits in int.
	(interval_has_all_properties, interval_has_some_properties)
	(interval_has_some_properties_list, add_properties, remove_properties)
	(Fadd_text_properties, Fremove_text_properties)
	(Fremove_list_of_text_properties, text_property_stickiness):
	Use bool for booleans.
	(Fadd_text_properties, Fremove_text_properties):
	(Fremove_list_of_text_properties):
	Reindent do-while as per GNU style.

2013-02-25  Eli Zaretskii  <eliz@gnu.org>

	Implement CLASH_DETECTION for MS-Windows.

	* filelock.c [WINDOWSNT]: Include w32.h.
	(MAKE_LOCK_NAME): Don't use 'lock', it clashes with MS runtime
	function of that name.  Up-case the macro arguments.
	(IS_LOCK_FILE): New macro.
	(fill_in_lock_file_name): Use IS_LOCK_FILE instead of S_ISLNK.
	(create_lock_file): New function, with body extracted from
	lock_file_1.